_docs/kustomize/akash-operator-ip/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: akash-ip-operator
  namespace: akash-services
  labels:
    akash.network/component: akash-ip-operator
spec:
  selector:
    matchLabels:
      app: akash-ip-operator
  replicas: 1
  revisionHistoryLimit: 1
  template:
    metadata:
      labels:
        app: akash-ip-operator
        akash.network/component: akash-ip-operator
    spec:
      serviceAccountName: akash-ip-operator
      containers:
      - name: akash-ip-operator
        image: ghcr.io/akash-network/provider:stable
        imagePullPolicy: IfNotPresent
        args: ["provider-services", "ip-operator"]
        ports:
          - name: api
            containerPort: 8086
