_docs/kustomize/akash-operator-ip/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: operator-ip
  namespace: akash-services
  labels:
    app.kubernetes.io/name: ip
    app.kubernetes.io/instance: ip-service
    app.kubernetes.io/component: operator
    app.kubernetes.io/part-of: provider
spec:
  selector:
    app.kubernetes.io/name: ip
    app.kubernetes.io/instance: ip-service
    app.kubernetes.io/component: operator
    app.kubernetes.io/part-of: provider
  ports:
    - name: rest
      port: 8080
